added media query and wikipedia exercise

--- a/Hover Exercise/index.html
+++ b/Hover Exercise/index.html
@@ -13,7 +13,7 @@
 <br>
 <br>
 <div class="text">
-	<center>Don't touch me.</center>
+	<center>Don't touch me!</center>
 </div>
 <br>
 <br>
@@ -22,7 +22,7 @@
 <br>
 <br>
 <div class="meow">
-	<center><img src="/Users/erin/Desktop/Parsons/Core%201%20Interaction/angy.png" style="width: 300px;height: 300px;"></center>
+	<center><img src="angy.png" style="width: 300px;height: 300px;"></center>
 
 <div class="meow">
 	</div>
