--- a/animation-exercise/index.html
+++ b/animation-exercise/index.html
@@ -7,9 +7,13 @@
 </head>
 <body>
   <div class="container">
-     <div>
-      <svg id="yin-yang" data-name="yin-yang" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 1000"><defs><style>.cls-1{fill:#d2928b;}</style></defs><title>yin-yang</title><path class="cls-1" d="M337,609.25c10.48-51.08,44.58-95.11,94.05-112.62,49.21-17.41,103.15-15.08,152-33.85,79.83-30.66,128-115.65,123.74-199.57C702.2,172.28,633.36,106.06,545,93.1,315.1,59.34,100.05,258.49,90.84,483.47q-.34,8.26-.34,16.53c0,214.75,165.31,390.88,375.62,408.11C382.76,825.82,313.1,725.93,337,609.25ZM500,246a42.5,42.5,0,1,1-42.5,42.5A42.5,42.5,0,0,1,500,246Z"/><circle class="cls-1" cx="500" cy="711.5" r="42.5"/></svg>
+    <div class="eyeball-1"></div>
+    <div class="eyeball-2"></div>
+
+    <div>
+      <svg id="eyes" data-name="eyes" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1126.06 184.1"><defs><style>.cls-1{fill:#fff;stroke:#231f20;stroke-miterlimit:10;}</style></defs><path class="cls-1" d="M452.69,88.6a323.67,323.67,0,0,1-229.6,95A323.46,323.46,0,0,1,.72,95.5a324.82,324.82,0,0,1,452-6.9Z"/><path class="cls-1" d="M674.09,95.5a324.82,324.82,0,0,1,452-6.9,323.64,323.64,0,0,1-229.54,95A323.41,323.41,0,0,1,674.09,95.5Z"/></svg>
     </div>
+
   </div>
 </body>
 </html>
