change embed link to non-local

--- a/portfolio/Hover.html
+++ b/portfolio/Hover.html
@@ -35,7 +35,9 @@
 		</div>
 	</div>
 	</div>
-	<embed type="text/html" src="/Users/erin/Documents/GitHub/erincochanco.github.io/Hover-Exercise/index.html" width="979" height="660" class="hover-right">
+	<div class="right">
+	<embed type="text/html" src="https://erincochanco.github.io/rock-garden/" width="979" height="660" class="hover-right">
+	</div>
 	
 </div>
 
