changed to iframe

--- a/portfolio/rockgarden.html
+++ b/portfolio/rockgarden.html
@@ -37,7 +37,9 @@
 
 	<div class="right">
 	
-	<embed type="text/html" src="/Users/erin/Documents/GitHub/erincochanco.github.io/rock-garden/index.html" width="984" height="685" class="rg-right">
+	<iframe src="https://erincochanco.github.io/rock-garden/" width="984" height="685" class="rg-right">
+	</iframe>
+
 
 </div>
 </div>
