--- a/portfolio/Coding.html
+++ b/portfolio/Coding.html
@@ -33,8 +33,9 @@
 		</div>
 	</div>
 	</div>
-	
-	<embed type="text/html" src="/Users/erin/Documents/GitHub/erincochanco.github.io/coding-from-life-hw/index.html" width="984" height="665" class="interview-right">
+
+	<iframe src="https://erincochanco.github.io/coding-from-life-hw/" width="984" height="665" class="interview-right">
+	</iframe>
 	
 </div>
 
