--- a/portfolio/Css-ani.html
+++ b/portfolio/Css-ani.html
@@ -31,8 +31,9 @@
 		</div>
 	</div>
 	</div>
-	
-	<embed type="text/html" src="/Users/erin/Documents/GitHub/erincochanco.github.io/animation-exercise/index.html" width="984" height="665" class="interview-right">
+
+	<iframe src="https://erincochanco.github.io/animation-exercise/" width="960" height="660" class="interview-right">
+	</iframe>
 	
 </div>
 
