--- a/portfolio/Hover.html
+++ b/portfolio/Hover.html
@@ -36,7 +36,10 @@
 	</div>
 	</div>
 	<div class="right">
-	<embed type="text/html" src="https://erincochanco.github.io/rock-garden/" width="979" height="660" class="hover-right">
+
+	<iframe src="https://erincochanco.github.io/Hover-Exercise/" width="979" height="660" class="hover-right">
+	</iframe>
+
 	</div>
 	
 </div>
