--- a/portfolio/Js-sketch.html
+++ b/portfolio/Js-sketch.html
@@ -34,9 +34,9 @@
 	</div>
 	</div>
 
-	<embed type="text/html" src="/Users/erin/Documents/GitHub/erincochanco.github.io/javascript-exercise/index.html" width="984" height="665" class="interview-right">
-	
-	
+	<iframe src="https://erincochanco.github.io/javascript-exercise/" width="984" height="665" class="interview-right">
+	</iframe>
+
 </div>
 
 
