--- a/portfolio/interview.html
+++ b/portfolio/interview.html
@@ -36,8 +36,9 @@
 	</div>
 	
 	<div class="right">
-	
-	<embed type="text/html" src="/Users/erin/Documents/GitHub/erincochanco.github.io/interview/index.html" width="984" height="665" class="interview-right">
+
+	<iframe src="https://erincochanco.github.io/interview/" width="984" height="665" class="interview-right">
+	</iframe>
 
 </div>
 
