--- a/portfolio/Wiki.html
+++ b/portfolio/Wiki.html
@@ -33,7 +33,8 @@
 	</div>
 	</div>
 	
-	<embed type="text/html" src="/Users/erin/Documents/GitHub/erincochanco.github.io/Wikipedia-Exercise/index.html" width="984" height="665" class="interview-right">
+			<iframe src="erincochanco.github.io/Hover-Exercise/" width="984" height="665" class="interview-right">
+	</iframe>
 
 </div>
 
