--- a/portfolio/Wiki.html
+++ b/portfolio/Wiki.html
@@ -33,7 +33,7 @@
 	</div>
 	</div>
 	
-			<iframe src="erincochanco.github.io/Hover-Exercise/" width="984" height="665" class="interview-right">
+			<iframe src="erincochanco.github.io/Wikipedia-Exercise/" width="984" height="665" class="interview-right">
 	</iframe>
 
 </div>
