--- a/portfolio/index2.html
+++ b/portfolio/index2.html
@@ -16,7 +16,7 @@
 				<div class="wh">Work hard,</div>&nbsp;<div class="ph"><a href="index.html" class="ph">play hard.</a></div>
 		</div>
 
-		<div class="read">Read</div>
+		<div class="read"><a href="https://tinyurl.com/3p2z3dpa">Read</a></div><
 	</div>
 	<div class="hello">
 		<div class="hello1">OH. HI.</div>
