--- a/portfolio/p5-js.html
+++ b/portfolio/p5-js.html
@@ -15,7 +15,7 @@
 		<div class="whph">
 				<div class="wh"><a href="index2.html" class="wh">Work hard,</a></div>&nbsp;<div class="ph">play hard!</div>
 		</div>
-		<div class="read">Read</div>
+		<div class="read"><a href="https://tinyurl.com/3p2z3dpa">Read</a></div><
 	</div>
 
 <div class="left-rg">
