added interview and fixed wiki

--- a/interview-3/index.html
+++ b/interview-3/index.html
@@ -19,7 +19,7 @@
 			Interviewing a Working Student
 			</div>
 		</div>
-		<div class="navi">Navigate to Question:<br><br>1 • 2 • 3 • 4 • 5 • 6 • 7 • 8 • 9 • 10</div>
+		<div class="navi">Navigate to Question:<br><br><a href="#one">1 </a>• <a href="#five">5 </a>• <a href="#ten">10</a></div>
 	</div>
 
 	<div class="divider">
@@ -29,7 +29,7 @@
 	</div>
 
 	<div class="QnA">
-		<div class="Q">1&nbsp;. What’re the advantages or disadvantages of being a working student?</div>
+		<a id="one"><div class="Q">1&nbsp;. What’re the advantages or disadvantages of being a working student?</div></a>
 
 		<div class="A">Plain and simple, I am doing it for the money. But more seriously, I need a more consistent flow of income given that I am back in the city in an apartment rather than back home like last semester. I have to pay all my bills and rent somehow and having a job really alleviates the stress so I don't keep digging into my savings.</div>
 
@@ -53,7 +53,7 @@
 		
 		<br>
 
-		<div class="Q">5.&nbsp;Do you have any strategies for time management?
+		<a id="five"><div class="Q">5.&nbsp;Do you have any strategies for time management?</a>
 		<div class="A">As I said before, my job isn't too much of a time constraint given that I only work three times a week for a total of around 15-16 hours a week. I actually worked during the school year back home last semester and I was even picking up more shifts than I am now. But to keep myself on track, I plan out my week of all the assignments I have to do for school so I can spresad the workload.</div>
 		
 		<br>
@@ -80,7 +80,7 @@
 		
 		<br>
 
-		<div class="Q">10.&nbsp;Are there aspects of your identity (i.e. race/gender/religion) that’ve made your job more difficult?</div>
+		<a id="ten"><div class="Q">10.&nbsp;Are there aspects of your identity (i.e. race/gender/religion) that’ve made your job more difficult?</div></a>
 		<div class="A">Not as much when I worked at Starbucks, but I have gotten racist remarks before in previous jobs. When I worked at a local pet retail store, while I was still training I accidentally rang up someone incorrectly. I found out later on that the customer went to one of my coworkers and told them "You better watch out for that ethnic kid" I was just taken aback when I heard this information. But now, I have really experienced much adversity at work.</div>		
 	</div>
 
