--- a/quarantine-diaries/index.html
+++ b/quarantine-diaries/index.html
@@ -9,13 +9,15 @@
 <body>
 	<div class="main">
 		<img src="house.svg" height="600">
-		<div class="clouds">
-			<img src="cloud-1.svg" class="cloud-1" height="250">
-			<img src="cloud-2.svg" class="cloud-2" height="250">
-			<img src="cloud-3.svg" class="cloud-3" height="250">
-		</div>
 		<div class="day">Day 1</div>
+		<div class="clouds">
+			<img src="cloud-4.svg" class="cloud-3" height="200">
+		</div>
+		<div class="clouds-2">
+			<img src="cloud-2.svg" class="cloud-2" height="200">
+		</div>
 	</div>
+
 
 </body>
 </html>
