--- a/quarantine-diaries/index.html
+++ b/quarantine-diaries/index.html
@@ -2,19 +2,19 @@
 <html>
 <head>
 	<title>Quarantine Diaries</title>
-	 <link rel="icon" type="image/x-icon" href="smile.svg">
+	 <link rel="icon" type="image/x-icon" href="favicon.svg">
 	<link rel="stylesheet" href="https://use.typekit.net/anc3ipx.css">
 	<link rel="stylesheet" href="main.css">
 </head>
 <body>
 	<div class="main">
 		<img src="house.svg" height="600">
-		<div class="day">Day 1</div>
+		<div class="enter"><a href="https://www.youtube.com/watch?v=sRxrwjOtIag">ENTER</a></div>
 		<div class="clouds">
-			<img src="cloud-4.svg" class="cloud-3" height="200">
+			<img src="cloud-4.svg" class="cloud-3" height="220">
 		</div>
 		<div class="clouds-2">
-			<img src="cloud-2.svg" class="cloud-2" height="200">
+			<img src="cloud-2.svg" class="cloud-2" height="220">
 		</div>
 	</div>
 
