--- a/quarantine-diaries/index.html
+++ b/quarantine-diaries/index.html
@@ -7,9 +7,17 @@
 	<link rel="stylesheet" href="main.css">
 </head>
 <body>
+<div class=keep>
+<div class="header">
+		<div class="about">ABOUT</div>
+		<div class="home">HOME</div>
+		<div class="read">READ</div>
+</div>
+
+
 	<div class="main">
 		<img src="house.svg" height="600">
-		<div class="enter"><a href="https://www.youtube.com/watch?v=sRxrwjOtIag">ENTER</a></div>
+		<div class="enter"><a href="day-one.html">ENTER</a></div>
 		<div class="clouds">
 			<img src="cloud-4.svg" class="cloud-3" height="220">
 		</div>
@@ -17,7 +25,6 @@
 			<img src="cloud-2.svg" class="cloud-2" height="220">
 		</div>
 	</div>
-
-
+</div>
 </body>
 </html>
