--- a/quarantine-diaries/day-three.html
+++ b/quarantine-diaries/day-three.html
@@ -10,15 +10,14 @@
 	<div class="main">
 		<img src="house-bg.svg" class="house-bg">
 		<div class="day">DAY</div>
-		<div class="one">ONE</div>
+		<div class="one">THREE</div>
 	</div>
 	<div class="green">
 		<div class="text">
-			knit, called anna, code, watched kiki with chloe, dyed my hair red, watched kipo the age of wonderbeasts<br><br>
-			ate bangus (breakfast), 2 iced coffees, grilled chicken (lunch), chicken shish kebab (dinner)
+			IDK YET
 		</div>
 		<div class="next-box">
-			<div class="next"><a href="day-two.html">
+			<div class="next"><a href="day-four.html">
 			next
 			</a>
 			</div>
