--- a/quarantine-diaries/day-two.html
+++ b/quarantine-diaries/day-two.html
@@ -10,15 +10,15 @@
 	<div class="main">
 		<img src="house-bg.svg" class="house-bg">
 		<div class="day">DAY</div>
-		<div class="one">ONE</div>
+		<div class="one">TWO</div>
 	</div>
 	<div class="green">
 		<div class="text">
-			knit, called anna, code, watched kiki with chloe, dyed my hair red, watched kipo the age of wonderbeasts<br><br>
-			ate bangus (breakfast), 2 iced coffees, grilled chicken (lunch), chicken shish kebab (dinner)
+			knit, watched i want you to eat my pancreas with Lance and others, code<br><br>
+			ate longganisa (breakfast), 2 coffees (one iced, one got), bolognese (dinner)
 		</div>
 		<div class="next-box">
-			<div class="next"><a href="day-two.html">
+			<div class="next"><a href="day-three.html">
 			next
 			</a>
 			</div>
