--- a/quarantine-diaries/index.html
+++ b/quarantine-diaries/index.html
@@ -7,14 +7,6 @@
 	<link rel="stylesheet" href="main.css">
 </head>
 <body>
-<div class=keep>
-<div class="header">
-		<div class="about">ABOUT</div>
-		<div class="home">HOME</div>
-		<div class="read">READ</div>
-</div>
-
-
 	<div class="main">
 		<img src="house.svg" height="600">
 		<div class="enter"><a href="day-one.html">ENTER</a></div>
@@ -24,7 +16,13 @@
 		<div class="clouds-2">
 			<img src="cloud-2.svg" class="cloud-2" height="220">
 		</div>
+		<div class="grass"></div>
+		<a href="construction.html"><div class="sign">
+			<img src="under-construction-legs.svg" height="130">
+			<div class="sign-text">UNDER<br>CONSTRUCTION </div>
+		</div>
+		</a>
 	</div>
-</div>
+
 </body>
 </html>
