fixed construction sign

--- a/quarantine-diaries/construction.html
+++ b/quarantine-diaries/construction.html
@@ -9,7 +9,7 @@
 <body>
 <div class="construction">
 	THIS WEBSITE IS UNDER CONSTRUCTION<br><br>
-	UPDATED ON:<br><br>
+	UPDATED ON: 12/22/21<br><br>
 	DONE TODAY:<br><br>
 	TO DO:<br><br>
 	IDEAS: <br><br>
