--- a/quarantine-diaries/index.html
+++ b/quarantine-diaries/index.html
@@ -17,11 +17,11 @@
 			<img src="cloud-2.svg" class="cloud-2" height="220">
 		</div>
 		<div class="grass"></div>
-		<a href="construction.html"><div class="sign">
-			<img src="under-construction-legs.svg" height="130">
+		<div class="sign">
+			<a href="construction.html">
+			<img src="under-construction-legs.svg" height="130"></a>
 			<div class="sign-text">UNDER<br>CONSTRUCTION </div>
 		</div>
-		</a>
 	</div>
 
 </body>
