--- a/quarantine-diaries/construction.html
+++ b/quarantine-diaries/construction.html
@@ -11,7 +11,7 @@
 	THIS WEBSITE IS UNDER CONSTRUCTION<br><br>
 	UPDATED ON: 12/22/21<br><br>
 	DONE TODAY:(home)added grass and construction sign (construction page) added (content page) added days 1-3<br><br>
-	TO DO: figure out how to differeinte days, add illus, fix homepage, probablty make next button better, figure out navigation system<br><br>
+	TO DO: figure out how to differeinte days, add illus, fix homepage, probablty make next button better, figure out navigation system, add home button to content pages<br><br>
 	IDEAS: <br><br>
 	<br>
 	<a href="index.html">BACK</a>
