change house to png

--- a/quarantine-diaries/index.html
+++ b/quarantine-diaries/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div class="main">
-		<img src="house.svg" height="600">
+		<img src="house.png" height="600">
 		<div class="enter"><a href="day-one.html">ENTER</a></div>
 		<div class="clouds">
 			<img src="cloud-4.svg" class="cloud-3" height="220">
