days layout done

--- a/quarantine-diaries/day-four.html
+++ b/quarantine-diaries/day-four.html
@@ -10,25 +10,16 @@
 	<div class="door-closed">
 		<a href="index.html"><div class="closed"><img src="door-closed.svg"></div></a>
 	</div>
-	<div class="door-open">
-		<a href="index.html"><div class="open"><img src="door-open.svg"></div></a>
-	</div>
-
-
 	<div class="main">
 		<img src="house-bg.svg" class="house-bg">
 		<div class="day">DAY</div>
-		<div class="one">ONE</div>
+		<div class="one">FOUR</div>
 	</div>
 	<div class="green">
 		<div class="text">
-			knit, called anna, code, watched kiki with chloe, dyed my hair red, watched kipo the age of wonderbeasts<br><br>
-			ate bangus (breakfast), 2 iced coffees, grilled chicken (lunch), chicken shish kebab (dinner)
+			corned beef breakfast, call with akio, watched howls castle, swab at 4:00 am, slept, went home
 		</div>
 		<div class="next-box">
-			<div class="next"><a href="day-two.html">
-			next
-			</a>
 			</div>
 		</div>
 	</div>
