--- a/quarantine-diaries/day-three.html
+++ b/quarantine-diaries/day-three.html
@@ -7,6 +7,9 @@
 	<link rel="stylesheet" href="main.css">
 </head>
 <body>
+	<div class="door-closed">
+		<a href="index.html"><div class="closed"><img src="door-closed.svg"></div></a>
+	</div>
 	<div class="main">
 		<img src="house-bg.svg" class="house-bg">
 		<div class="day">DAY</div>
@@ -14,7 +17,7 @@
 	</div>
 	<div class="green">
 		<div class="text">
-			IDK YET
+			knit, chicken inasal, watch kipo, call with chloe, watched the hows of us
 		</div>
 		<div class="next-box">
 			<div class="next"><a href="day-four.html">
