--- a/quarantine-diaries/day-two.html
+++ b/quarantine-diaries/day-two.html
@@ -7,6 +7,9 @@
 	<link rel="stylesheet" href="main.css">
 </head>
 <body>
+	<div class="door-closed">
+		<a href="index.html"><div class="closed"><img src="door-closed.svg"></div></a>
+	</div>
 	<div class="main">
 		<img src="house-bg.svg" class="house-bg">
 		<div class="day">DAY</div>
