--- a/quarantine-diaries/index.html
+++ b/quarantine-diaries/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="main.css">
 </head>
 <body>
+<div class="overflow">
 	<div class="main">
 		<img src="house.png" height="600" class="house-home">
 		<div class="enter"><a href="day-one.html">ENTER</a></div>
@@ -23,6 +24,6 @@
 			<div class="sign-text">UNDER<br>CONSTRUCTION </div>
 		</div>
 	</div>
-
+</div>
 </body>
 </html>
