--- a/quarantine-diaries/construction.html
+++ b/quarantine-diaries/construction.html
@@ -9,12 +9,16 @@
 <body>
 <div class="construction">
 	THIS WEBSITE IS UNDER CONSTRUCTION<br><br>
-	UPDATED ON: 12/23/21
-	DONE TODAY: ADDED DOOR ICON
+	UPDATED ON: 12/27/21
+	UPDATED DAY 3, ADDED DAY 4
 
+	<br><br>
+	UPDATED ON: 12/23/21
+	ADDED DOOR ICON
+	<br><br>
 
 	UPDATED ON: 12/22/21<br><br>
-	DONE TODAY:(home)added grass and construction sign (construction page) added (content page) added days 1-3<br><br>
+	(home)added grass and construction sign (construction page) added (content page) added days 1-3<br><br>
 	TO DO: figure out how to differeinte days, add illus, fix homepage, probablty make next button better, figure out navigation system, add home button to content pages<br><br>
 	IDEAS: <br><br>
 	<br>
