--- a/quarantine-diaries/day-four.html
+++ b/quarantine-diaries/day-four.html
@@ -20,6 +20,9 @@
 			corned beef breakfast, call with akio, watched howls castle, swab at 4:00 am, slept, went home
 		</div>
 		<div class="next-box">
+			<div class="next">
+			end
+			</a>
 			</div>
 		</div>
 	</div>
