--- a/eric/index.html
+++ b/eric/index.html
@@ -9,8 +9,8 @@
 <body>
     <div class="home">
         <img src="assets/date-10.png" class="shrek">
-        <a href="yes.html"><img src="assets/date-16.png" class="yes"></a>
-        <a href="no.html"> <img src="assets/date-17.png" class="no"></a>
+        <a href="https://erincochanco.github.io/eric/yes.html"><img src="assets/date-16.png" class="yes"></a>
+        <a href="https://erincochanco.github.io/eric/no.html"> <img src="assets/date-17.png" class="no"></a>
         <img src="assets/date-15.png" class="cloud">
         <img src="assets/date-07.png" class="home-background">
     </div>
