--- a/eric/yes.html
+++ b/eric/yes.html
@@ -9,7 +9,7 @@
 <body>
     <img src="assets/date-12.png" class="heart">
     <img src="assets/date-14.png" class="yes-text">
-    <a href="index.html"><img src="assets/date-18.png" class="home-button"></a>
+    <a href="https://erincochanco.github.io/eric/index.html"><img src="assets/date-18.png" class="home-button"></a>
     <img src="assets/date-08.png" class="background">
  
     
