--- a/eric/no.html
+++ b/eric/no.html
@@ -9,7 +9,7 @@
 <body>
     <img src="assets/date-11.png" class="ghost">
     <img src="assets/date-13.png" class="no-text">
-    <a href="index.html"><img src="assets/date-18.png" class="home-button"></a>
+    <a href="https://erincochanco.github.io/eric/index.html"><img src="assets/date-18.png" class="home-button"></a>
     <img src="assets/date-08.png" class="background">
  
     
