added media queries

--- a/erin-23rd-birthday/index.html
+++ b/erin-23rd-birthday/index.html
@@ -10,7 +10,7 @@
    <body>
       <div class="container">
          <div class="header">Erin's 23rd Birthday</div>
-         <img src="cake.png" width="200px">
+         <img id="cake" src="cake.png">
          <div class="details">December 07, 2023<br>30E 29th St., Apt. 35C <br> 7:00 pm onwards</div>
          <a href="https://partiful.com/e/8PfJWi8fb8JdjpMWADC6">
             <div class="rsvp"> RSVP </div>
