--- a/erin-23rd-birthday/index.html
+++ b/erin-23rd-birthday/index.html
@@ -3,7 +3,8 @@
    <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Cursor Trail</title>
+      <title>You're invited!</title>
+      <link rel="icon" type="image/x-icon" href="icon.png">
       <link rel="stylesheet" href="styles.css">
       <link rel="stylesheet" href="https://use.typekit.net/zff0tth.css">
    </head>
